# papercheck

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  example-paper-audit.yml  publish.yml
docs/: adapting_to_new_papers.md  agent_eval.md  ci.md  comparison.md  failure_modes.md  limitations.md  pat_principles.md  privacy.md  references.bib  reviewer_roles.md  severity_scale.md  workflow.md
domain_packs/: README.md  general.yaml  machine_learning.yaml  numerical_analysis.yaml  optimization.yaml  pde.yaml  stochastic_analysis.yaml
eval/: RESULTS.md  findings.json  run_eval.py
examples/toy_clean_paper/: refs.bib
profiles/: profiles.json
prompts/: 00_bootstrap_orchestrator.md  01_repository_inspector.md  02_build_and_source_hygiene.md  03_segmenter_and_budgeter.md  04_theorem_inventory.md  05_assumption_dependency_auditor.md  06_equation_indexer.md  07_formalist_proof_auditor.md  08_domain_specialist_auditor.md  09_main_theorem_chain_auditor.md  10_numerical_experiments_auditor.md  11_related_work_and_novelty_auditor.md  12_notation_consistency_auditor.md  13_source_hygiene_auditor.md  14_global_synthesis.md  15_issue_adjudicator.md  16_patch_planner.md  17_patcher.md  18_regression_auditor.md  19_final_acceptance_gate.md  20_version_comparison_auditor.md
schemas/: domain_pack.schema.json  issue.schema.json  manual_check.schema.json  patch.schema.json  segment.schema.json  state.schema.json
scripts/: agent_eval_report.py  privacy_check.py
src/papercheck/: __init__.py
src/papercheck/cli/: __init__.py  main.py
src/papercheck/core/: __init__.py  _resources.py  adjudicate.py  compare.py  domainpack.py  gate.py  html_report.py  issues.py  ledger.py  paths.py  profiles.py  render.py  schemas.py  segments.py  state.py  texscan.py  verify.py  webserve.py
src/papercheck/mcp_server/: __init__.py  handlers.py  server.py
templates/: assumption_record.md  equation_record.md  final_gate.md  issue.md  patch_record.md  report_header.md  segment_record.md  theorem_record.md
tests/: test_agent_eval_replay.py  test_cli.py  test_compare.py  test_domain_packs.py  test_domainpack_gen.py  test_fixtures.py  test_gate.py  test_handlers.py  test_html_report.py  test_issues_intake.py  test_ledger.py  test_mcp_server.py  test_packaging.py  test_profiles.py  test_prompts_pack.py  test_render.py  test_schemas.py  test_segments.py  test_skeleton.py  test_state.py  test_state_unification.py  test_suppress_pragma.py  test_texscan.py  test_texscan_ast.py  test_verify.py  test_webserve.py
tests/fixtures/toy_bad_gronwall_constant/: expected.json  main.tex
tests/fixtures/toy_bad_label_refs/: expected.json  main.tex  refs.bib  sec.tex
tests/fixtures/toy_clean_paper/: expected_gate.json  main.tex
tests/fixtures/toy_false_positive_trap/: expected.json  main.tex
tests/fixtures/toy_missing_assumption/: expected.json  main.tex
tests/fixtures/toy_overclaimed_abstract/: expected.json  main.tex
