[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papercheck"
version = "0.1.0"
description = "A reproducible audit harness for mathematical LaTeX papers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["latex", "mathematics", "research-software", "reproducibility", "paper-review", "mcp", "audit"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "typer>=0.12",
    "jsonschema>=4.0",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/OWNER-PLACEHOLDER/papercheck"
Repository = "https://github.com/OWNER-PLACEHOLDER/papercheck"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
papercheck = "papercheck.cli.main:app"
papercheck-mcp = "papercheck.mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/papercheck"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "papercheck/schemas"
"prompts" = "papercheck/prompts"
"templates" = "papercheck/templates"
"domain_packs" = "papercheck/domain_packs"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
